# Casadi

./: README.md
StateSpace_Model/: Casadi_learns_to_balance_TrackProgress.odt  DEC_model.m  IPOPT_output_LA1.odt  NLP.m  Remnants_PRTS60p5_70cycles.fig  getRemnants.m  get_nlp.m  jit_tmp.c  jit_tmp4cSCUw.c  jit_tmp9C0uj1.c  jit_tmpBvSTc6.c  jit_tmpMM7LDM.c  jit_tmpQOuyUK.c  jit_tmpjWfJrK.c  jit_tmpnCopbW.c  jit_tmpt4yyTw.c  noicesim.fig  simulate_dynamics.m  test1.m  test_solver_8cyc.m  test_solver_for_ideal_nlp.m  zoom17_6_2020.m
amplide.linux64/: ampl  baron  conopt  cplex  gurobi  knitro  libgomp.so.1  libxprl.so.x8.5  loqo  minos  snopt  xpress
amplide.linux64/amplide/: amplide.ini  artifacts.xml
amplide.linux64/amplide/configuration/: config.ini
amplide.linux64/amplide/configuration/org.eclipse.equinox.simpleconfigurator/: bundles.info
ma57-3.10.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
ma57-3.10.0/example/: Makefile  Makefile.am  Makefile.in  ma57ds.f  ma57ds.output  ma57ss.f  ma57ss.output
ma57-3.10.0/matlab/: INSTALL  README  ma57.m  ma57_factor.f90  ma57_full_test.m  ma57_install.m  ma57_solve.f90  ma57_stats.m  ma57_test.m  ma57_test1.mat  ma57_test2.mat  ma57_test3.mat
ma57-3.10.0/src/: Makefile  Makefile.am  Makefile.in  ddeps.lo  fakemetis.lo  libfakemetis.la  libma57.la  ma57d.lo  ma57s.f  ma57s.lo  sdeps.f  sdeps.lo
ma57-3.10.0/src/.libs/: libfakemetis.la  libfakemetis.lai  libfakemetis.so.0.0.0  libma57.la  libma57.lai  libma57.so.0  libma57.so.0.0.0
(+4 files in other folders)
